# lifeten-webgis

./: LICENSE.txt  README.md
django/: .spyderworkspace
django/lifeten/lifeten/static/hslayers-3.5/: CMakeLists.txt  RELEASE
django/lifeten/lifeten/static/hslayers-3.5/resources/ol/: OpenLayers-2.11.js
django/lifeten/lifeten/static/hslayers-3.5/resources/theme/: ext-gray.css  ext-green.css
django/lifeten/lifeten/static/hslayers-3.5/resources/theme/default/: HSApps.css  HSAppsLoader.css
django/lifeten/lifeten/static/hslayers-3.5/source/: HS.js
django/lifeten/lifeten/static/hslayers-3.5/source/HSLayers/: Context.js  ContextBrowser.js  Embed.js  FeaturesGrid.js  FileDialog.js  InfoPanel.js  MapPortal.js  MapViewer.js  OWS.js  SensorPanel.js  TimeSlider.js  Util.js  WMCManager.js
django/lifeten/lifeten/static/hslayers-3.5/source/HSLayers/Context/: Summary.js
django/lifeten/lifeten/static/hslayers-3.5/source/HSLayers/ContextBrowser/: Model.js  PreviewPlugin.js  Server.js
django/lifeten/lifeten/static/hslayers-3.5/source/HSLayers/Control/: ArgParser.js  BoxLayerSwitcher.js  Click.js  DrawControls.js  Editing.js  Measure.js  PanZoom.js  PanZoomBar.js  Pin.js  ProjectionSwitcher.js  ScaleSwitcher.js  Soupatko.js  State.js
django/lifeten/lifeten/static/hslayers-3.5/source/Lang/: HSLayers-eng.js  HSLayers-ger.js  HSLayers-lav.js  HSLayers-template.js
django/lifeten/lifeten/static/hslayers-3.5/source/patches/: Util.js  readme.txt
django/lifeten/lifeten/static/hslayers-3.5/tests/: HSLTest.js  printer_context.html  search-test-01.html
django/lifeten/lifeten/static/hslayers-3.5/tests/data/: search_results.kml
django/lifeten/lifeten/static/hslayers-3.5/tools/: build.py  compress.py  po2js.sh
django/lifeten/lifeten/static/hslayers-3.5/tools/config/: Editing.cfg  HSApps-core.cfg  HSApps.cfg  HSLayers.cfg  MapPanel.cfg  MapViewer.cfg  OpenLayersPatches.cfg  SLD.cfg  openlayers-full-with-cze.cfg
mapserver/: aree_comuni.map  (+5 more)
(+495 files in other folders)
